--- a/PixelsActionTester/PixelsActionTester.uproject
+++ b/PixelsActionTester/PixelsActionTester.uproject
@@ -2,5 +2,12 @@
 	"FileVersion": 3,
 	"EngineAssociation": "4.25",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Plugins": [
+		{
+			"Name": "PixelsAction",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/8be12fe61b654ac9a3b4169b4074b06c"
+		}
+	]
 }
