--- a/PixelsActionTester/PixelsActionTester.uproject
+++ b/PixelsActionTester/PixelsActionTester.uproject
@@ -6,8 +6,13 @@
 	"Plugins": [
 		{
 			"Name": "PixelsAction",
-			"Enabled": false,
+			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/8be12fe61b654ac9a3b4169b4074b06c"
+		},
+		{
+			"Name": "TimeMachine",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/8f9fb22542fd4415a712dc1bbbd99628"
 		}
 	]
 }
